--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.3",
     "@supabase/supabase-js": "^2.38.4",
@@ -39,6 +40,7 @@
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
